--- a/projects/ashevilleriverpark/css/style.css
+++ b/projects/ashevilleriverpark/css/style.css
@@ -59,6 +59,9 @@ body, html {
     background-color: #fff;
 	width: 100%;
     height: 100%;
+	position:absolute;
+    height: calc(100vh - 125px);
+    width: 100%;
 }
 #Report {
     background-color: #fff;
