--- a/projects/ashevilleriverpark/css/style.css
+++ b/projects/ashevilleriverpark/css/style.css
@@ -388,6 +388,7 @@ body, html {
     height: 100px;
     width: 100%;
     margin-top: 20px;
+	margin-bottom: 20px;
     background: #4077A5;
     color: #fff;
     display:flex;
