Change Home Page Footer Click
Wrong id refrerenced made all pages scroll before navigating to home - changed id of home footer image to fix

--- a/projects/map501/css/main.css
+++ b/projects/map501/css/main.css
@@ -402,6 +402,13 @@ h2{
     cursor: pointer;
 }
 
+#footImageHome{
+	height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
 
 .sharedFootDiv{
     position: relative;
