--- a/projects/babyjames/css/style.css
+++ b/projects/babyjames/css/style.css
@@ -144,3 +144,46 @@ body{
     margin: 0px;
     color: #000;
 }
+
+#screenSmallText{
+    z-index: 8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    background-color: #d3d3d3;
+    display: none;
+    font-size: 18px;
+}
+
+#appWrapper{
+    height: 100%;
+    width: 100%;
+}
+
+@media screen and (max-width: 950px) {
+    body {
+        background-color: #d3d3d3;
+    }
+    #appWrapper{
+        display: none;
+    }
+    #screenSmallText{
+        display:flex;
+    }
+}
+
+@media screen and (max-height: 650px) {
+    body {
+        background-color: #d3d3d3;
+    }
+    #appWrapper{
+        display: none;
+    }
+    #screenSmallText{
+        display:flex;
+    }
+}
